==> MikroElektronika/mikrosdk_v2/targets/avr_8bit/mikroe/avr/src/adc/implementation_2/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_analog_in_map.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_get_base_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_get_handle)->hal_ll_adc_handle))->base
#define hal_ll_adc_get_base_struct(_handle) ((const hal_ll_adc_base_handle_t *)_handle)
#define HAL_LL_ADC_CH_CTRL_SINGLEENDED    (0x01)
#define HAL_LL_ADC_CH_MUXCTRL_SHIFT       (3)
#define HAL_LL_ADC_CH_CTRL_START          (7)
#define HAL_LL_ADC_CH_INTFLAGS_IF         (0)
#define HAL_LL_ADC_CH_0                   (0)
#define HAL_LL_ADC_CH_1                   (1)
#define HAL_LL_ADC_CH_2                   (2)
#define HAL_LL_ADC_CH_3                   (3)
#define HAL_LL_ADC_CTRLA_ENABLE           (0x01)
#define HAL_LL_ADC_CTRLB_RESOLUTION_12BIT (0x00)
#define HAL_LL_ADC_CTRLB_RESOLUTION_8BIT  (0x04)
#define HAL_LL_ADC_REFCTRL_INTVCC         (0x10)
#define HAL_LL_ADC_REFCTRL_AREFA          (0x20)
#define HAL_LL_ADC_REFCTRL_AREFB_D        (0x30)
#define HAL_LL_ADC_PRESCALER_4            (0)
#define HAL_LL_ADC_PRESCALER_8            (1)

hal_ll_err_t hal_ll_adc_register_handle(hal_ll_pin_name_t pin, hal_ll_adc_voltage_reference_t vref_input, hal_ll_adc_resolution_t resolution, hal_ll_adc_handle_register_t *handle_map, uint8_t *hal_module_id) {
    uint8_t pin_check_result;
    uint8_t index;

    if ( HAL_LL_PIN_NC == (pin_check_result = hal_ll_adc_check_pins( pin, &index, handle_map )) ) {
        return HAL_LL_ADC_WRONG_PIN;
    };

    switch ( resolution ) {
        case HAL_LL_ADC_RESOLUTION_8_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_8_BIT;
            break;
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_12_BIT;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    if ( hal_ll_adc_hw_specifics_map[pin_check_result].pin != pin )
    {
        hal_ll_adc_map_pin( pin_check_result, &index );

        handle_map[pin_check_result]->init_ll_state = false;
    }

    if ( HAL_LL_ADC_UNSUPPORTED_VREF == hal_ll_adc_check_vref_input( hal_ll_adc_hw_specifics_map, pin_check_result, vref_input )) {
        return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].base;

    handle_map[pin_check_result]->hal_ll_adc_handle = (handle_t *)&hal_ll_module_state[pin_check_result].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_set_resolution(handle_t *handle, hal_ll_adc_resolution_t resolution) {
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);

    low_level_handle->init_ll_state = false;

    switch ( resolution ) {
        case HAL_LL_ADC_RESOLUTION_8_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_8_BIT;
            break;
        case HAL_LL_ADC_RESOLUTION_12_BIT:
            hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_12_BIT;
            break;

        default:
            return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    hal_ll_adc_init( hal_ll_adc_hw_specifics_map_local );

    low_level_handle->init_ll_state = true;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read(handle_t *handle, uint16_t *readDatabuf) {
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_adc_get_module_state_address );
    const hal_ll_adc_base_handle_t *base = hal_ll_adc_get_base_handle;
    volatile uint16_t resl, resh, analog_input;

    analog_input = hal_ll_adc_hw_specifics_map_local->channel;

    write_reg( base->chn_regs[HAL_LL_ADC_CH_0].ch_ctrl, HAL_LL_ADC_CH_CTRL_SINGLEENDED ); // Single-ended mode

    write_reg( base->chn_regs[HAL_LL_ADC_CH_0].ch_muxctrl, analog_input << HAL_LL_ADC_CH_MUXCTRL_SHIFT ); // Analog input select

    clear_reg( base->chn_regs[HAL_LL_ADC_CH_0].ch_intctrl ); // Disable interrupt mode

    set_reg_bit( base->chn_regs[HAL_LL_ADC_CH_0].ch_ctrl, HAL_LL_ADC_CH_CTRL_START ); // Start conversion

    while( !( check_reg_bit( base->chn_regs[HAL_LL_ADC_CH_0].ch_intflags, HAL_LL_ADC_CH_INTFLAGS_IF ))); // Wait until IF flag is 1

    set_reg_bit( base->chn_regs[HAL_LL_ADC_CH_0].ch_intflags, HAL_LL_ADC_CH_INTFLAGS_IF ); // Clear IF flag by writing 1

    resl = read_reg( base->chn_regs[HAL_LL_ADC_CH_0].ch_resl );
    resh = read_reg( base->chn_regs[HAL_LL_ADC_CH_0].ch_resh );

    *readDatabuf = resl | ( resh << 8 );

    /*
     * From documentation:
     * "The approximate value corresponding to ground is around 200.
     *  This value corresponds to the digital result of ∆V (0.05 * 4095).
     *  ∆V exists to allow zero-crossing detection."
     *
     * This formula is used to map converted values from range [200-4095] to [0-4095] with 12 bit resolution.
     * (x - in_min) * (out_max - out_min) / (in_max - in_min) + out_min
     *        x - converted value
     *   in_min - 200
     *   in_max - 4095
     *  out_min - 0
     *  out_max - 4095
     *
     * Uncomment the code below if you want to avoid zero-crossing.
     */
    //BEGIN
    /*
    volatile uint16_t res, out_max;
    float mul, lower_limit;
    if( HAL_LL_ADC_RESOLUTION_12_BIT == hal_ll_adc_hw_specifics_map_local->resolution ) {
        out_max = 4095;
    } else if ( HAL_LL_ADC_RESOLUTION_8_BIT == hal_ll_adc_hw_specifics_map_local->resolution ) {
        out_max = 255;
    }

    res = resl | ( resh << 8 );
    lower_limit = (float)( 0.05 * out_max );
    mul = (float)( out_max / ( out_max - lower_limit ));
    if( res >= lower_limit ) {
        *readDatabuf = (( resl | ( resh << 8 )) - lower_limit ) * mul;
    } else {
        *readDatabuf = 0;
    }
    */
    //END

    return HAL_LL_ADC_SUCCESS;
}

void hal_ll_adc_close(handle_t *handle) {
    hal_ll_adc_hw_specifics_map_t *hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);
    low_level_handle = hal_ll_adc_get_handle;

    if( HAL_LL_MODULE_ERROR != hal_ll_adc_hw_specifics_map_local->base->adc_regs.ctrla ||
        HAL_LL_MODULE_ERROR != hal_ll_adc_hw_specifics_map_local->base->chn_regs[HAL_LL_ADC_CH_0].ch_ctrl ) {

        hal_ll_adc_hw_specifics_map_local->vref_input = HAL_LL_ADC_VREF_DEFAULT;
        hal_ll_adc_hw_specifics_map_local->vref_value = 0;
        hal_ll_adc_hw_specifics_map_local->resolution = HAL_LL_ADC_RESOLUTION_12_BIT;

        low_level_handle->hal_ll_adc_handle = NULL;
        low_level_handle->hal_drv_adc_handle = NULL;

        low_level_handle->init_ll_state = false;

        hal_ll_adc_hw_specifics_map_local->pin = HAL_LL_PIN_NC;
    }
}

static hal_ll_pin_name_t hal_ll_adc_check_pins(hal_ll_pin_name_t pin, uint8_t *index, hal_ll_adc_handle_register_t *handle_map) {
    uint8_t pin_index = 0;
    static const uint16_t adc_map_size = ( sizeof( _adc_map ) / sizeof( hal_ll_adc_pin_map_t ) );

    if ( HAL_LL_PIN_NC == pin ) {
        return HAL_LL_PIN_NC;
    }

    for ( pin_index = 0; pin_index < adc_map_size; pin_index++ ) {
        if ( _adc_map[pin_index].pin == pin ) {
            *index = pin_index;
            return _adc_map[ pin_index ].module_index;
        }
    }

    return HAL_LL_PIN_NC;
}

static void hal_ll_adc_hw_init(hal_ll_adc_hw_specifics_map_t *map) {
    const hal_ll_adc_base_handle_t *base = hal_ll_adc_get_base_struct(map->base);

    write_reg( base->adc_regs.prescaler, HAL_LL_ADC_PRESCALER_8);

    hal_ll_adc_set_resolution_bare_metal( map );

    hal_ll_adc_set_vref_bare_metal( map );
}

static void hal_ll_adc_init(hal_ll_adc_hw_specifics_map_t *map) {
    const hal_ll_adc_base_handle_t *base = hal_ll_adc_get_base_struct(map->base);

    hal_ll_adc_hw_init( map );

    write_reg( base->adc_regs.ctrla, HAL_LL_ADC_CTRLA_ENABLE ); // ADC enable
}
